add credenciais de acesso e esteira de teste para PR

--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -1,7 +1,7 @@
-name: Deploy
+name: Test on TP
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
@@ -35,7 +35,6 @@ jobs:
         $COMMAND_IAC init  
         $COMMAND_IAC validade
         $COMMAND_IAC plan
-        $COMMAND_IAC apply -auto-approve
 
 
 
